--- a/formulariopweb2_luizroberto/src/main/resources/templates/listar_alunos.html
+++ b/formulariopweb2_luizroberto/src/main/resources/templates/listar_alunos.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
 
     <style>
         h1 {
@@ -27,7 +27,7 @@
 
 <body>
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark" >
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
             <a class="navbar-brand" href="#" style="color: white">Campus IFAL-Rio Largo</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,13 +41,13 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="form"style="color: white">Formulario <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="form" style="color: white">Formulario <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0" method="POST" action="/procurarAluno">
                     <input class="form-control mr-sm-2" type="search" placeholder="Procurar" name="nome" id="nome"
                         aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="busca()">Pesquisar</button>
                 </form>
             </div>
         </nav>
@@ -59,22 +59,22 @@
         <table class="table">
             <thead>
                 <tr>
-                   
+
                     <th scope="col">Nome</th>
                     <th scope="col">Email</th>
-                    
+
                     <th scope="col"></th>
                     <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="aluno:${alunos}">
-                    
-                    <td th:text="${pessoa.nome}"></td>
+
+                    <td th:text="${aluno.nome}"></td>
                     <td th:text="${aluno.email}"></td>
-                    
-                    <td><a th:href="@{'/excluir_aluno/' + ${pessoa.id}}"> <button type="submit" class="btn btn-danger">Excluir</button></a></td>
-                    <td><a th:href="@{'/atualizar_aluno/' + ${pessoa.id}}"><button type="submit" class="btn btn-info">Atualizar</button></a></td>
+
+                    <td><a th:href="@{'/excluir_aluno/' + ${aluno.id}}"> <button type="submit" class="btn btn-danger">Excluir</button></a></td>
+                    <td><a th:href="@{'/atualizar_aluno/' + ${aluno.id}}"><button type="submit" class="btn btn-info">Atualizar</button></a></td>
                 </tr>
             </tbody>
         </table>
@@ -83,5 +83,42 @@
     </div>
 
 </body>
+<script>
+    function busca() {
+        var str = document.getElementById('id').value;
+
+        var ids = pegaTodosIds();
+        var idsFormatados = FormataIds(ids);
+
+        //if (idsFormatados.includes(str.toLowerCase()))
+        if (idsFormatados.indexOf(str.toLowerCase()) > -1)
+            console.log(str + ' existe.');
+        else
+            console.log(str + ' ñ existe');
+    }
+
+
+    function pegaTodosIds() {
+        var todosElementos = document.getElementsByTagName("*");
+        var todosIds = [];
+        for (var i = 0, n = todosElementos.length; i < n; ++i) {
+            var elemento = todosElementos[i];
+            if (elemento.id) {
+                todosIds.push(elemento.id);
+            }
+        }
+        return todosIds;
+    }
+
+    function FormataIds(ids) {
+        var idsFormatados = [];
+        for (var i = 0; i < ids.length; i++) {
+            //console.log(ids[i]);
+            var nova_str = ids[i].replace(/[^\w\s]/gi, ' ').replace('_', ' ').toLowerCase();
+            idsFormatados.push(nova_str);
+        }
+        return idsFormatados
+    }
+</script>
 
 </html>
