adicionando navbar no formulario e mudando seu estilo

--- a/formulariopweb2_luizroberto/src/main/resources/templates/form.html
+++ b/formulariopweb2_luizroberto/src/main/resources/templates/form.html
@@ -15,7 +15,9 @@
 
   <link href="bootstrapFiles/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
+        
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -45,7 +47,8 @@
     align-content: center;
     margin-left: 20%;
     margin-right: 20%;
-    text-align: center;
+    margin-top: 5%;
+    text-align: left;
     background-color: darkgrey;
     }
     #validar{
@@ -57,7 +60,29 @@
 </head>
 
 <body class="bg-light">
-  
+	 <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+            <a class="navbar-brand" href="#" style="color: white; padding-left: 1.8em">Campus IFAL-Rio Largo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/" style="color: white; padding-left: 2.8em">Home <span class="sr-only">(current)</span></a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="listar_alunos" style="color: white; padding-left: 2.8em ">Lista De Alunos <span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+                
+            </div>
+        </nav>
+    </div>
+
   <div class="container">
     <div class="py-5 text-center">
       <h1 class="lead">Formulario de Cadastro</h1>
@@ -71,7 +96,7 @@
           <div class="row">
             <div class="col-md-12 mb-3">
               <label for="name" class="CampoLabel">Nome</label>
-              <input type="text" class="form-control" id="nome" placeholder="Ex. Jose Maria da Silva" name="nome" th:value="${aluno.nome}" style="text-transform:uppercase">
+              <input type="text" class="form-control" id="nome" placeholder="Ex. Jose Maria da Silva" name="nome" th:value="${aluno.nome}" style="text-transform:toLowerCase">
             </div>
               <span class="msg_erro msg_nome" style="display: none"> O Campo nome é Obrigatorio</span>
               <span class="msg_erro msg_nome_invalido" style="display: none"> este Nome é invalido</span>
