concluindo a mudanca de formulario com sucesso talvez

--- a/formulariopweb2_luizroberto/src/main/resources/templates/formAluno.html
+++ b/formulariopweb2_luizroberto/src/main/resources/templates/formAluno.html
@@ -1,199 +1,330 @@
 <!DOCTYPE html>
- 
-<html>
- <head>
- <title>formulario</title>
- <meta name="description" content="Aprenda a criar um site completo que usa formulários em HTML">
- <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
- <script src="formulario.js"></script>
+
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="layout">
+<meta charset="UTF-8" />
+
+<head>
+  <title>formulario</title>
+  <meta name="description" content="Aprenda a criar um site completo que usa formulários em HTML">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+  <meta name="generator" content="Jekyll v3.8.5">
+
+  <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/checkout/">
+
+  <link href="bootstrapFiles/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <link href="./Checkout example · Bootstrap_files/form-validation.css" rel="stylesheet">
+  <script src="formulario.js"></script>
+
 </head>
 
- <style>
-   h1{
+<style>
+  h1 {
     text-align: center;
     background-color: darkgrey;
   }
-  h2{
+
+  h2 {
     text-align: center;
   }
-  
- </style>
+</style>
 
- <body>
+<body>
+  <h1>Faça seu Cadastro agora</h1>
 
-  <h1>Faça seu Cadastro agora</h1> 
+  <form method="POST" action="/novo_cadastro">
+    <input type="number" name="id" id="id" th:value="${aluno.id}" style="display: none">
+    <!-- DADOS PESSOAIS-->
+    <fieldset>
+      <legend>Dados Pessoais</legend>
+      <table cellspacing="10">
+        <tr>
+          <td>
+            <label for="nome">Nome </label>
+          </td>
+          <td align="left">
+            <input type="text" class="form-control" id="nome" placeholder="Ex. Jose Maria da Silva" name="nome"
+              th:value="${aluno.nome}" style="text-transform:toLowerCase">
+          </td>
+          <span class="msg_erro msg_nome" style="display: none"> O Campo nome é Obrigatorio</span>
+          <span class="msg_erro msg_nome_invalido" style="display: none"> este Nome é invalido</span>
 
-<form name="myForm" action="Script_do_Formulario.php" onsubmit="return validateForm()" method="post">
+        <tr>
+          <br>
+          <td>
+            <label>Data Nasci. </label>
+          </td>
+          <td align="left">
+            <input type="text" name="dia" size="2" maxlength="2" value="dd">
+            <input type="text" name="mes" size="2" maxlength="2" value="mm">
+            <input type="text" name="ano" size="4" maxlength="4" value="aaaa">
+          </td>
+        </tr>
+        <span class="msg_erro msg_nome" style="display: none"> O Campo Data Nasci. é Obrigatorio</span>
+        <span class="msg_erro msg_nome_invalido" style="display: none"> este Data Nasci. é invalido</span>
 
-<!-- DADOS PESSOAIS-->
-<fieldset>
- <legend>Dados Pessoais</legend>
- <table cellspacing="10">
-  <tr>
-   <td>
-    <label for="nome">Nome: </label>
-   </td>
-   <td align="left">
-    <input type="text" name="fname">
-   </td>
-   <td>
-    <label for="sobrenome">Sobrenome: </label>
-   </td>
-   <td align="left">
-    <input type="text" name="sobrenome">
-   </td>
-  </tr>
-  <tr>
-   <td>
-    <label>Nascimento: </label>
-   </td>
-   <td align="left">
-    <input type="text" name="dia" size="2" maxlength="2" value="dd"> 
-   <input type="text" name="mes" size="2" maxlength="2" value="mm"> 
-   <input type="text" name="ano" size="4" maxlength="4" value="aaaa">
-   </td>
-  </tr>
-  <tr>
-   <td>
-   
-  <tr>
-   <td>
-    <label>CPF:</label>
-   </td>
-   <td align="left">
-    <input type="text" name="cpf" size="9" maxlength="9"> - <input type="text" name="cpf2" size="2" maxlength="2">
-   </td>
-  </tr>
- </table>
-</fieldset>
+        <tr>
+          <td>
 
-<br />
-<!-- ENDEREÇO -->
-<fieldset>
- <legend>Dados de Endereço</legend>
- <table cellspacing="10">
+        <tr>
+          <td>
+            <label>CPF</label>
+          </td>
+          <td align="left">
+            <input type="text"class="form-control" name="cpf" id="cpf" placeholder="" required="" size="9" maxlength="9" th:value="${aluno.cpf}">
+             - <input type="text" name="cpf2" size="2" maxlength="2" th:value="${aluno.cpf}">
+          </td>
+          <span class="msg_erro msg_nome" style="display: none"> O Campo CPF é Obrigatorio</span>
+          <span class="msg_erro msg_nome_invalido" style="display: none"> este CPF é invalido</span>
+        </tr>
+        
+        <tr>
+            <td>
+             <label for="sexo">Sexo</label>
+            </td>
+            <td align="left">
+             <select name="sexo" class="custom-select d-block w-100" id="sexo" required=""  th:value="${aluno.sexo}"> 
+             <option value="ac">Masculino</option> 
+             <option value="al">Feminino</option> 
+             <option value="al">Prefiro não Informar</option>
+            </select>
+            </td>
+           </tr>
 
-  <tr>
-   <td>
-    <label for="rua">Rua:</label>
-   </td>
-   <td align="left">
-    <input type="text" name="rua">
-   </td>
-   <td>
-    <label for="numero">Numero:</label>
-   </td>
-   <td align="left">
-    <input type="text" name="numero" size="4">
-   </td>
-  </tr>
-  <tr>
-   <td>
-    <label for="bairro">Bairro: </label>
-   </td>
-   <td align="left">
-    <input type="text" name="bairro">
-   </td>
-  </tr>
-  <tr>
-   <td>
-    <label for="estado">Estado:</label>
-   </td>
-   <td align="left">
-    <select name="estado"> 
-    <option value="ac">Acre</option> 
-    <option value="al">Alagoas</option> 
-    <option value="am">Amazonas</option> 
-    <option value="ap">Amapá</option> 
-    <option value="ba">Bahia</option> 
-    <option value="ce">Ceará</option> 
-    <option value="df">Distrito Federal</option> 
-    <option value="es">Espírito Santo</option> 
-    <option value="go">Goiás</option> 
-    <option value="ma">Maranhão</option> 
-    <option value="mt">Mato Grosso</option> 
-    <option value="ms">Mato Grosso do Sul</option> 
-    <option value="mg">Minas Gerais</option> 
-    <option value="pa">Pará</option> 
-    <option value="pb">Paraíba</option> 
-    <option value="pr">Paraná</option> 
-    <option value="pe">Pernambuco</option> 
-    <option value="pi">Piauí</option> 
-    <option value="rj">Rio de Janeiro</option> 
-    <option value="rn">Rio Grande do Norte</option> 
-    <option value="ro">Rondônia</option> 
-    <option value="rs">Rio Grande do Sul</option> 
-    <option value="rr">Roraima</option> 
-    <option value="sc">Santa Catarina</option> 
-    <option value="se">Sergipe</option> 
-    <option value="sp">São Paulo</option> 
-    <option value="to">Tocantins</option> 
-   </select>
-   </td>
-  </tr>
-  <tr>
-   <td>
-    <label for="cidade">Cidade: </label>
-   </td>
-   <td align="left">
-    <input type="text" name="cidade">
-   </td>
-  </tr>
-  <tr>
-   <td>
-    <label for="cep">CEP: </label>
-   </td>
-   <td align="left">
-    <input type="text" name="cep" size="5" maxlength="5"> - <input type="text" name="cep2" size="3" maxlength="3">
-   </td>
-  </tr>
- </table>
-</fieldset>
-<br />
+      </table>
+    </fieldset>
 
-<!-- DADOS DE LOGIN -->
-<fieldset>
- <legend>Dados de login</legend>
- <table cellspacing="10">
-  <tr>
-   <td>
-    <label for="email">E-mail: </label>
-   </td>
-   <td align="left">
-    <input type="text" name="email">
-   </td>
-  </tr>
-  <tr>
-   <td>
-    <label for="imagem">Imagem de perfil:</label>
-   </td>
-   <td>
-    <input type="file" name="imagem" >
+    <br />
 
-   </td>
-  </tr>
-  <tr>
-   <td>
-    <label for="pass">Senha: </label>
-   </td>
-   <td align="left">
-    <input type="password" name="pass">
-   </td>
-  </tr>
-  <tr>
-   <td>
-    <label for="passconfirm">Confirme a senha: </label>
-   </td>
-   <td align="left">
-    <input type="password" name="passconfirm">
-   </td>
-  </tr>
- </table>
-</fieldset>
-<br />
-<input type="submit">
-<input type="reset" value="Limpar">
-</form>
+    <!-- DADOS DE LOGIN -->
+    <fieldset>
+      <legend>Dados de login</legend>
+      <table cellspacing="10">
+        <tr>
+          <td>
+            <label for="email">E-mail </label>
+          </td>
+          <td align="left">
+            <input type="email" class="form-control" id="email" placeholder="Ex.usuario@exemplo.com" name="email" th:value="${aluno.email}">
+          </td>
+          <span class="msg_erro msg_nome" style="display: none"> O Campo E-mail é Obrigatorio</span>
+          <span class="msg_erro msg_nome_invalido" style="display: none"> este E-mail é invalido</span>  
+        </tr>
+        <br>
+        <tr>
+          <td>
+            <label for="pass">Senha </label>
+          </td>
+          <td align="left">
+            <input type="password" name="senha" class="form-control" id="senha" placeholder="" required="" th:value="${aluno.senha}">
+          </td>
+          <span class="msg_erro msg_nome" style="display: none"> O Campo Senha é Obrigatorio</span>
+          <span class="msg_erro msg_nome_invalido" style="display: none"> esta Senha é invalido</span>  
+        </tr>
+        <tr>
+          <td>
+            <label for="passconfirm">Confirme senha </label>
+          </td>
+          <td align="left">
+            <input type="password" name="confirmacao" type="password" class="form-control" id="confirmacao" placeholder="" required="" th:value="${aluno.confirmacao}" >
+          </td>
+          <span class="msg_erro msg_nome" style="display: none"> O Campo Confirmar Senha é Obrigatorio</span>
+          <span class="msg_erro msg_nome_invalido" style="display: none"> esta Confirmação da Senha é invalido</span>  
+        </tr>
+      </table>
+    </fieldset>
+    <br>
+    <!-- ENDEREÇO -->
+    <fieldset>
+      <legend>Dados do Curso</legend>
+      <table cellspacing="10">
+        <BR>
+        <label>MODULO</label>
+        <br>
+        <br>
+        <div class="form-check">
+          <input id="primeiro" name="primeiro" type="radio" class="custom-control-input" checked="" required="" th:selected="${aluno.modulo =='Primeiro'}" value="primeiro">
+          <label class="custom-control-label" for="primeiro">
+            Primeiro
+          </label>
+        </div>
+        <div class="form-check">
+          <input id="segundo" name="segundo" type="radio" class="custom-control-input" required=""  th:selected="${aluno.modulo =='Segundo'}" value="segundo">
+          <label class="custom-control-label" for="segundo">
+            Segundo
+          </label>
+        </div>
+        <div class="form-check">
+          <input id="terceiro" name="segundo" type="radio" class="custom-control-input" required="" th:selected="${aluno.modulo == 'Terceiro'}" value="terceiro">
+          <label class="custom-control-label" for="segundo">
+            Terceiro
+          </label>
+        </div>
+        <br>
+        <br>
+        <label>AREAS DE ATUAÇÕES PREFERIDAS</label>
+        <span class="msg_erro msg_areas" style="display: none">O Campo areas de atuações preferidas é Obrigatorio</span></p>
+        
+        <br>
+        <div class="form-check">
+          <input type="checkbox" class="custom-control-input" id="programacao" name="areasPreferidas">
+          <label class="custom-control-label" for="programacao" th:selected="${aluno.areasPreferidas != null ? #arrays.contains(aluno.areasPreferidas, 'Programação') : false}">
+            Programação
+          </label>
+        </div>
+        <div class="form-check">
+          <input  type="checkbox" class="custom-control-input" id="redes" name="areasPreferidas">
+          <label class="custom-control-label" for="redes" th:selected="${aluno.areasPreferidas != null ? #arrays.contains(aluno.areasPreferidas, 'Redes de Computadores') : false}">
+            Redes de Conputadores
+          </label>
+        </div>
+        <div class="form-check">
+          <input type="checkbox" class="custom-control-input" id="manutencao" name="areasPreferidas">
+          <label class="custom-control-label" for="manutencao" th:selected="${aluno.areasPreferidas != null ? #arrays.contains(aluno.areasPreferidas, 'Manutenção de computadores') : false}">
+            Manutenção de Conputadores
+          </label>
+        </div>
+      </table>
+    </fieldset>
 
- </body>
+    <br />
+    <div class="row">
+        <button class="btn btn-primary col-md-3 mb-3" onclick="validar()" type="submit" id="validar" style="margin-left: 530px">VALIDAR</button>
+        <button class="btn btn-danger col-md-3 mb-3" type="reset" id="linpar">LIMPAR</button>
+      </div>
+  </form>
+
+  </form>
+  <p th:text="${mensagem}"></p>
+
+  <script src="bootstrapFiles/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+  <script src="bootstrapFiles/bootstrap.bundle.min.js"
+    integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
+    crossorigin="anonymous"></script>
+    <script>
+        function validar() {
+          var validar = 0;
+        
+          var nome = document.getElementById("nome");
+          var spanNome = document.querySelector(".msg_nome");
+          var spanNomeInvalido = document.querySelector(".msg_nome_invalido");
+         
+    
+          if (nome.value == "") {
+            spanNome.style.display = "inline-block";
+            spanNomeInvalido.style.display = "none";
+          }
+          else{
+            spanNome.style.display = "none";
+            validar++;
+            if(nome.value.length < 4){
+              spanNomeInvalido.style.display = "inline-block";
+            }
+            else{
+              validar++;
+              spanNomeInvalido.style.display = "none";
+            }
+          }
+    
+          var email = document.getElementById("email");
+          var spanEmail = document.querySelector(".msg_email")
+          var spanEmailInvalido = document.querySelector(".msg_email_invalido")
+    
+          if(email.value == ""){
+            spanEmail.style.display = "inline-block";
+            spanEmailInvalido.style.display = "none";
+          }
+          else{
+            spanEmail.style.display = "none";
+            validar++;
+            if(email.value.indexOf('@') == -1 || email.value.indexOf('.') == -1){
+              spanEmailInvalido.style.display = "inline-block";
+            }
+            else{
+              spanEmailInvalido.style.display = "none";
+              validar++;
+            }
+          } 
+    
+          var cpf = document.getElementById("cpf");
+          var spanCpf = document.querySelector(".msg_cpf")
+          var spanCpfInvalido = document.querySelector(".msg_cpf_invalido")
+    
+          if(cpf.value == ""){
+            spanCpf.style.display = "inline-block";
+            spanCpfInvalido.style.display = "none";
+          }
+          else{
+            spanCpf.style.display = "none";
+            validar++;
+            if( cpf.value.length < 11){
+              spanCpfInvalido.style.display = "inline-block";
+            }
+            else{
+              spanCpfInvalido.style.display = "none";
+              validar++;
+            }
+          }
+          
+          var checkbox = document.getElementsByName("areasCheck");
+          var spanCheckbox = document.querySelector(".msg_areas");
+          var checkboxCheck = false;
+        for(var i = 0; i < checkbox.length; i++){
+         if(checkbox[i].checked == true){
+           checkboxCheck = true;
+         }
+          }
+         if(checkboxCheck){
+           spanCheckbox.style.display = "none";
+           validar++;
+          }
+          else{
+            spanCheckbox.style.display = "inline-block";
+          }
+          
+          var senha = document.getElementById("senha");
+          var spanSenha = document.querySelector(".msg_senha");
+          var confSenha = document.getElementById("confSenha");
+          var spanConfSenha = document.querySelector(".msg_confSenha");
+          var spanSenhaInvalida = document.querySelector(".msg_senhaInvalida");
+          
+          if(senha.value == ""){
+            spanSenha.style.display = "inline-block";
+          }
+         else{
+          spanSenha.style.display = "none";
+          validar++;
+             if(confSenha.value == ""){
+              spanConfSenha.style.display = "inline-block";
+              }else{
+                spanConfSenha.style.display = "none";
+                validar++;
+                if(senha.value != confSenha.value){
+                  console.log(senha.value);
+                  console.log(confSenha.value);
+                  spanSenhaInvalida.style.display = "inline-block";
+                }else{
+                  spanSenhaInvalida.style.display = "none";
+                  validar++;
+                }
+              }
+          } 
+          
+         if(valided == 10){
+        alert("Cadastro concluido!");
+         }
+          
+        }
+      </script>
+</body>
+
+
 </html>
