--- a/formulariopweb2_luizroberto/src/main/resources/templates/index.html
+++ b/formulariopweb2_luizroberto/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Cadastrar Alunos</h5>
                     <p class="card-text">nosso novo sistema de cadastro</p>
-                    <a href="form" class="btn btn-primary">Cadastrar</a>
+                    <a href="formAluno" class="btn btn-primary">Cadastrar</a>
                   </div>
                 </div>
               </div>
