--- a/formulariopweb2_luizroberto/src/main/resources/templates/listar_alunos.html
+++ b/formulariopweb2_luizroberto/src/main/resources/templates/listar_alunos.html
@@ -41,7 +41,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="form" style="color: white">Formulario <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="formAluno" style="color: white">Formulario <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0" method="POST" action="/procurarAluno">
