--- a/formulariopweb2_luizroberto/src/main/resources/templates/index.html
+++ b/formulariopweb2_luizroberto/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
       }
       h1{
         margin-top: 200px;
-        font-family:Arial, Helvetica, sans-serif;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-size: 70px;
       }
     </style>
