corrigindo erros de sintax

--- a/formulariopweb2_luizroberto/src/main/resources/templates/formAluno.html
+++ b/formulariopweb2_luizroberto/src/main/resources/templates/formAluno.html
@@ -138,7 +138,7 @@
         <br>
         <br>
         <div class="form-check">
-          <input id="primeiro" name="primeiro" type="radio" class="custom-control-input" checked="" required="" th:selected="${aluno.modulo =='Primeiro'}" value="primeiro">
+          <input id="primeiro" name="primeiro" type="radio" class="custom-control-input" required="" th:selected="${aluno.modulo =='Primeiro'}" value="primeiro">
           <label class="custom-control-label" for="primeiro">
             Primeiro
           </label>
